# invoice_extractor_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  main.py  schemas.py
app/services/: __init__.py  invoice_service.py  openai_invoice_extractor.py
invoice_ai_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_api.py  test_invoice_service.py
