[project]
name = "invoice-ai-processor"
version = "0.1.0"
description = "LLM-based invoice processing backend using Python, FastAPI, and OpenAI APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.0.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
